# VINS-Fusion

./: .gitignore  README.md
camera_models/include/camodocal/calib/: CameraCalibration.h
camera_models/include/camodocal/chessboard/: Chessboard.h
ceres_optimization/: CMakeLists.txt
ceres_optimization/config/: parameters.yaml
ceres_optimization/include/: ceres_optimization.hpp  test.hpp
ceres_optimization/launch/: ceres_optimization.launch  ceres_test.launch
ceres_optimization/src/: Handler.cpp  Localize.cpp  Test.cpp  localize.cpp
config/my_cam/: mycam_0.yaml  mydata_mono.yaml
